[package]
name = "netease_music_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
indicatif = { version = "0.17.0", features = ["improved_unicode"] }
chrono = "0.4"
qr2term = "0.3"
base64 = "0.21"
image = "0.24"
